--- a/user-service.properties
+++ b/user-service.properties
@@ -16,9 +16,9 @@ server.port=8080
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #
-## Logging level
-#logging.level.org.springframework=INFO
-#logging.level.com.example.userservice=DEBUG
+# Logging level
+logging.level.org.springframework=INFO
+logging.level.com.example.userservice=DEBUG
 
 # Activate the desired profile
 spring.profiles.active=dev
