--- a/user-service.properties
+++ b/user-service.properties
@@ -7,14 +7,13 @@ spring.application.name=user-service
 server.port=8080
 
 ## Database configuration (update with your actual database details)
-#spring.datasource.url=jdbc:mysql://localhost:3306/userdb
-#spring.datasource.username=root
-#spring.datasource.password=your_password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
+spring.datasource.url=jdbc:postgresql://localhost:5432/user-servicedb
+spring.datasource.username=postgre
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=org.postgresql.Driver
 ## JPA/Hibernate configuration
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 #
 # Logging level
 logging.level.org.springframework=INFO
