--- a/service-registry.properties
+++ b/service-registry.properties
@@ -3,3 +3,6 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+# Import configuration from the Config Server
+spring.config.import=configserver
