--- a/user-service.properties
+++ b/user-service.properties
@@ -26,4 +26,4 @@ spring.profiles.active=dev
 spring.cloud.config.uri=http://localhost:8888
 
 # Import configuration from the Config Server
-spring.config.import=configserver:
+spring.config.import=configserver
