--- a/user-service.properties
+++ b/user-service.properties
@@ -8,7 +8,7 @@ server.port=8080
 
 ## Database configuration (update with your actual database details)
 spring.datasource.url=jdbc:postgresql://localhost:5432/user-servicedb
-spring.datasource.username=postgre
+spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 ## JPA/Hibernate configuration
