--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -21,3 +21,7 @@ spring.cloud.gateway.routes[3].uri=lb://LOGGING-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/logs/**
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.main.web-application-type=reactive
+
+
