--- a/user-service.properties
+++ b/user-service.properties
@@ -22,3 +22,5 @@ logging.level.com.example.userservice=DEBUG
 # Config Server URI
 spring.cloud.config.uri=http://localhost:8888
 
+spring.main.web-application-type=reactive
+
