--- a/application.properties
+++ b/application.properties
@@ -10,4 +10,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #
+spring.main.web-application-type=reactive
 
