--- a/service-registry.properties
+++ b/service-registry.properties
@@ -4,4 +4,5 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+spring.main.web-application-type=reactive
 
