--- a/service-registry.properties
+++ b/service-registry.properties
@@ -4,3 +4,4 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+spring.main.web-application-type=servlet
