surely working now

--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,5 +1,14 @@
 spring.application.name=service-registry
+# Server configuration
 server.port=8761
+spring.main.web-application-type=reactive
 
+# Eureka configuration
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+# Logging
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.com.netflix.eureka=DEBUG
