--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,8 +1,10 @@
 server.port=8080
 
 spring.application.name=api-gateway
+spring.config.import=optional:configserver:http://localhost:8888
 
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
@@ -20,6 +22,16 @@ spring.cloud.gateway.routes[3].id=logging-service
 spring.cloud.gateway.routes[3].uri=lb://LOGGING-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/logs/**
 
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.gateway.enabled=true
 
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
