--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,14 +1,16 @@
-spring.application.name=service-registry
-# Server configuration
 server.port=8761
-spring.main.web-application-type=reactive
 
-# Eureka configuration
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.application.name=service-registry
+spring.config.import=optional:configserver:http://localhost:8888
+
 eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.server.wait-time-in-ms-when-sync-empty=0
+eureka.server.enable-self-preservation=false
 
-# Logging
-logging.level.org.springframework.cloud.netflix.eureka=DEBUG
-logging.level.com.netflix.eureka=DEBUG
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
