--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,7 +1,7 @@
 server.port=8761
 
 spring.application.name=service-registry
-spring.config.import=optional:configserver:http://localhost:8888
+#spring.config.import=optional:configserver:http://localhost:8888
 
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
