--- a/service-registry.properties
+++ b/service-registry.properties
@@ -14,3 +14,7 @@ eureka.server.enable-self-preservation=false
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.com.netflix=DEBUG
+
