--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -26,6 +26,8 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.preferIpAddress=true
+eureka.instance.hostname=localhost
+eureka.instance.port=8761
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
