--- a/user-service.properties
+++ b/user-service.properties
@@ -3,6 +3,11 @@
 # Name of the application
 spring.application.name=user-service
 
+# Eureka registry
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
 # Server port
 server.port=8081
 
