--- a/service-registry.properties
+++ b/service-registry.properties
@@ -4,8 +4,8 @@ spring.application.name=service-registry
 #spring.config.import=optional:configserver:http://localhost:8888
 
 eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 #eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.server.wait-time-in-ms-when-sync-empty=0
