--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,1 +1,6 @@
 server.port=8086
+
+# Eureka registry
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
