--- a/admin-service.properties
+++ b/admin-service.properties
@@ -1,7 +1,28 @@
+# Admin Service Configuration
+
+# Name of the application
 spring.application.name=admin-service
-server.port=8084
 
 # Eureka registry
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Server port
+server.port=8084
+
+## Database configuration (update with your actual database details)
+spring.datasource.url=jdbc:postgresql://localhost:5432/admin-servicedb
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=org.postgresql.Driver
+## JPA/Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#
+# Logging level
+logging.level.org.springframework=INFO
+logging.level.com.example.userservice=DEBUG
+
+# Config Server URI
+spring.cloud.config.uri=http://localhost:8888
