--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -37,3 +37,7 @@ resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowSiz
 resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.waitDurationInOpenState=10000
 resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
+
+# Logging level
+logging.level.org.springframework=INFO
+logging.level.com.example.userservice=DEBUG
