--- a/auth-service.properties
+++ b/auth-service.properties
@@ -5,3 +5,7 @@ server.port=8086
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Logging level
+logging.level.org.springframework=INFO
+logging.level.com.example.userservice=DEBUG
