add server config

--- a/logging-service.properties
+++ b/logging-service.properties
@@ -1,5 +1,7 @@
 spring.application.name=admin-service
 server.port=8085
+# Config Server URI
+spring.cloud.config.uri=http://localhost:8888
 
 # Eureka registry
 eureka.client.registerWithEureka=true
