--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,5 +1,8 @@
 server.port=8080
 
+# Config Server URI
+spring.cloud.config.uri=http://localhost:8888
+
 spring.application.name=api-gateway
 spring.config.import=optional:configserver:http://localhost:8888
 
