--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,5 +1,7 @@
 spring.application.name=auth-service
 server.port=8086
+# Config Server URI
+spring.cloud.config.uri=http://localhost:8888
 
 # Eureka registry
 eureka.client.registerWithEureka=true
