--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -7,7 +7,7 @@ spring.application.name=api-gateway
 spring.config.import=optional:configserver:http://localhost:8888
 
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.lgit ower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
