--- a/logging-service.properties
+++ b/logging-service.properties
@@ -1,4 +1,4 @@
-spring.application.name=admin-service
+spring.application.name=logging-service
 server.port=8085
 # Config Server URI
 spring.cloud.config.uri=http://localhost:8888
