--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ logging.level.org.springframework.cloud=DEBUG
 
 # Database configuration (update with your actual database details)
 spring.datasource.url=jdbc:postgresql://localhost:5432/botchat
-spring.datasource.username=postgre
+spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 
