fix connections service to service

--- a/logging-service.properties
+++ b/logging-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=logging-service
 server.port=8085
 # Config Server URI
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
 
 # Logging level
 logging.level.org.springframework=INFO
