--- a/api-gateway-dev.properties
+++ b/api-gateway-dev.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # Config Server URI
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
 
 spring.application.name=api-gateway
 
