--- a/auth-service-dev.properties
+++ b/auth-service-dev.properties
@@ -1,8 +1,7 @@
 spring.application.name=auth-service
 server.port=8086
 # Config Server URI
-spring.cloud.config.uri=http://localhost:8888
-
+spring.cloud.config.uri=http://config-server:8888
 
 # Logging level
 logging.level.org.springframework=INFO
