--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -7,7 +7,7 @@ spring.application.name=user-service
 server.port=8081
 
 ## Database configuration (update with your actual database details)
-spring.datasource.url=jdbc:postgresql://localhost:5432/user-servicedb
+spring.datasource.url=jdbc:postgresql://postgres:5432/user-servicedb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,4 +20,4 @@ logging.level.org.springframework=INFO
 logging.level.com.example.userservice=DEBUG
 
 # Config Server URI
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
