--- a/user-service.properties
+++ b/user-service.properties
@@ -20,4 +20,5 @@ logging.level.org.springframework=INFO
 logging.level.com.example.userservice=DEBUG
 
 # Config Server URI
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
+
