--- a/admin-service-dev.properties
+++ b/admin-service-dev.properties
@@ -6,19 +6,20 @@ spring.application.name=admin-service
 # Server port
 server.port=8084
 
-## Database configuration (update with your actual database details)
+## Database configuration - PostgreSQL
 spring.datasource.url=jdbc:postgresql://postgres:5432/admin-servicedb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 ## JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Logging level
 logging.level.org.springframework=INFO
 logging.level.com.example.userservice=DEBUG
 
 # Config Server URI
 spring.cloud.config.uri=http://config-server:8888
-
