--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,4 @@
-auth-service.propertieslogging.level.org.springframework.cloud=DEBUG
+logging.level.org.springframework.cloud=DEBUG
 
 # Database configuration (update with your actual database details)
 spring.datasource.url=jdbc:postgresql://postgres:5432/botchat
@@ -9,5 +9,3 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#
-
