fix db connections

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework.cloud=DEBUG
 
 # Database configuration (update with your actual database details)
-spring.datasource.url=jdbc:postgresql://localhost:5432/botchat
+spring.datasource.url=jdbc:postgresql://postgres:5432/botchat
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
