--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,1 +1,11 @@
 logging.level.org.springframework.cloud=DEBUG
+# Database configuration
+spring.datasource.url=jdbc:postgresql://postgres:5432/botchat
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#
