--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework.cloud=DEBUG
 
-# Database configuration (update with your actual database details)
+# Database configuration
 spring.datasource.url=jdbc:postgresql://postgres:5432/botchat
 spring.datasource.username=postgres
 spring.datasource.password=12345678
