change db to local for dev

--- a/admin-service-dev.properties
+++ b/admin-service-dev.properties
@@ -7,7 +7,7 @@ spring.application.name=admin-service
 server.port=8081
 
 ## Database configuration - PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/admin-servicedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/admin-servicedb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
