--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework.cloud=DEBUG
 # Database configuration
-spring.datasource.url=jdbc:postgresql://postgres:5432/botchat
+spring.datasource.url=jdbc:postgresql://localhost:5432/botchat
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
