--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -14,6 +14,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ## JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
 # Logging level
 logging.level.org.springframework=INFO
