--- a/user-service.properties
+++ b/user-service.properties
@@ -6,7 +6,7 @@ spring.application.name=user-service
 # Server port
 server.port=8084
 
-## Database configuration (update with your actual database details)
+## Database configuration
 spring.datasource.url=jdbc:postgresql://postgres:5432/user-servicedb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
