let botchat listen to local db host

--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -7,7 +7,7 @@ spring.application.name=user-service
 server.port=8084
 
 ## Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/user-servicedb
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/user-servicedb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
