--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -16,15 +16,15 @@ spring:
           predicates:
             - Path=/api/v1/users/**
         - id: auth-service
-          uri: lb://AUTH-SERVICE
+          uri: http://auth-service:8082
           predicates:
             - Path=/api/v1/auth/**
         - id: admin-service
-          uri: lb://ADMIN-SERVICE
+          uri: http://admin-service:8081
           predicates:
             - Path=/api/v1/admin/**
         - id: logging-service
-          uri: lb://LOGGING-SERVICE
+          uri: http://logging-service:8083
           predicates:
             - Path=/api/v1/logs/**
 
