--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -54,4 +54,8 @@ resilience4j:
 logging:
   level:
     org.springframework: INFO
-    com.example.userservice: DEBUG
+    com.example.user-service: DEBUG
+    com.example.auth-service: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.ldap: DEBUG
+
