--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -14,27 +14,18 @@ spring:
 
   # PostgreSQL Database Configuration
   datasource:
-    url: jdbc:postgresql://postgres:5432/auth-servicedb
+    url: jdbc:postgresql://host.docker.internal:5432/auth-servicedb
     username: postgres
     password: 12345678
     driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 10
-      minimum-idle: 2
-      idle-timeout: 30000
-      max-lifetime: 1800000
-      connection-timeout: 30000
 
-  # JPA & Hibernate
   jpa:
-    database: postgresql
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   # LDAP Configuration (Optional, Keep if Needed)
   ldap:
